[package]
name = "starlight-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_egui = "0.20"
bevy-inspector-egui = "0.18"
rand = "0.8.5"
derive_more = "0.99.17"
big_space = "0.2.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
